# HireAI

./: .env.example  .gitignore  CLAUDE.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-new-domain-aggregate-vertical-slice.md  feature-development.md  update-enum-and-database-schema.md
.codex/: AGENTS.md
.github/workflows/: arbitration-ci.yml  backend-ci.yml  frontend-ci.yml  mcp-ci.yml
arbitration/: .gitignore  Dockerfile  README.md  pyproject.toml
arbitration/app/: callback.py  config.py  consumer.py  main.py  schemas.py
arbitration/app/graph/: build.py  nodes.py  state.py  tools.py
arbitration/tests/: test_callback.py  test_consumer.py  test_contract.py  test_graph.py  test_health.py  test_schemas.py  test_tools.py
backend/: pom.xml
backend/hireai-application/: pom.xml
backend/hireai-controller/: pom.xml
backend/hireai-domain/: pom.xml
backend/hireai-infrastructure/: pom.xml
backend/hireai-main/: pom.xml
backend/hireai-repository/: pom.xml
backend/hireai-utility/: pom.xml
demo-agent/: README.md  app.py  demo-article.txt  smoke_test.py
docs/: matching-selection-mechanics.md  programmatic-task-submission.md  sad-matching-engine-section.md  task-matching-design.md
docs/details/: architecture-decisions.md  data-model.md  (+7 more)
frontend/: .env.example  AGENTS.md  CLAUDE.md  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
mcp/: .gitignore  README.md  pyproject.toml
mcp/app/: client.py  config.py  server.py
mcp/tests/: test_client.py  test_client_methods.py  test_config.py  test_tools.py
(+1021 files in other folders)
